--- a/opinie.html
+++ b/opinie.html
@@ -20,7 +20,7 @@
     <title>Swiet</title>
   </head>
   <body>
-    <section id="topbar">
+    <section id="topbar" style="background: rgba(18, 114, 243, 0.8) !important;">
       <div class="container">
         <div class="row topbarcontent">
           <div class="col-4 col-xl-2 logocity">
@@ -135,7 +135,7 @@
       </div>
     </section>
 
-    <section class="pageheader">
+    <section class="pageheader" style="margin-top: 80px">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-lg-7 pageheader__cont">
@@ -602,12 +602,13 @@
               <h2 class="text-uppercase mt-3 font-weight-bold d-none">
                 Kontakt
               </h2>
-              <form action="">
+              <form action="" id="form">
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="form-group mt-2">
                       <label for="">Imię i Nazwisko</label>
                       <input
+                        id="name"
                         type="text"
                         class="form-control"
                         placeholder="Podaj imię i nazwisko"
@@ -619,6 +620,7 @@
                     <div class="form-group mt-2">
                       <label for="">Email</label>
                       <input
+                        id="email"
                         type="email"
                         class="form-control"
                         placeholder="Podaj adres e-mail"
@@ -630,6 +632,7 @@
                     <div class="form-group mt-2">
                       <label for="">Telefon</label>
                       <input
+                        id="phone"
                         type="text"
                         class="form-control"
                         placeholder="Podaj numer telefonu"
@@ -640,7 +643,11 @@
                   <div class="col-lg-6"></div>
                   <div class="col-12 form-group mt-2">
                     <label for="">Typ klienta</label>
-                    <select class="form-control" name="typ_klienta" id="">
+                    <select
+                      class="form-control"
+                      name="typ_klienta"
+                      id="client_type"
+                    >
                       <option value="osoba">Osoba fizyczna</option>
                       <option value="firma">Firma</option>
                     </select>
@@ -667,6 +674,7 @@
                       <label for="">Miejscowość</label>
                       <input
                         type="text"
+                        id="city"
                         class="form-control"
                         placeholder="Miasto"
                         value="Wrocław"
@@ -679,6 +687,7 @@
                     <div class="form-group mt-2">
                       <label for="">Kod pocztowy</label>
                       <input
+                        id="zip"
                         type="text"
                         class="form-control"
                         placeholder="Podaj kod pocztowy"
@@ -690,19 +699,35 @@
                   <div class="col-lg-4">
                     <div class="form-group mt-2">
                       <label for="">Ulica</label>
-                      <input type="text" class="form-control" value="" required />
+                      <input
+                        type="text"
+                        id="street"
+                        class="form-control"
+                        value=""
+                        required
+                      />
                     </div>
                   </div>
                   <div class="col-6 col-lg-4">
                     <div class="form-group mt-2">
                       <label for="">Numer domu</label>
-                      <input type="text" class="form-control" value="" />
+                      <input
+                        type="text"
+                        id="house_number"
+                        class="form-control"
+                        value=""
+                      />
                     </div>
                   </div>
                   <div class="col-6 col-lg-4">
                     <div class="form-group mt-2">
                       <label for="">Lokal</label>
-                      <input type="text" class="form-control" value="" />
+                      <input
+                        type="text"
+                        id="apartment_number"
+                        class="form-control"
+                        value=""
+                      />
                     </div>
                   </div>
                   <div class="col-12">
@@ -710,29 +735,14 @@
                       <label for="">Opis problemu</label>
                       <textarea
                         class="form-control"
-                        id="exampleFormControlTextarea1"
+                        id="notes"
                         placeholder="Opis problemu"
                         rows="3"
                         required
                       ></textarea>
                     </div>
                   </div>
-                  <div class="col-12">
-                    <div class="form-group d-none">
-                      <div class="form-check">
-                        <input
-                          class="form-check-input"
-                          type="checkbox"
-                          value=""
-                          id="invalidCheck2"
-                          required
-                        />
-                        <label class="form-check-label" for="invalidCheck2">
-                          Zgadzam się z polityką prywatności
-                        </label>
-                      </div>
-                    </div>
-                  </div>
+  
                   <div class="col-12 text-end mt-3">
                     <button class="btn btn-light" type="submit">Wysłać</button>
                   </div>
